/*
Copyright 2018 The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

//
// Resource topology node protobuf. This is an indirection PB that we use to
// conveniently pass topologically arranged RDs around. Note that children are
// directly included, while the parent is referenced by ID (optional; do not
// rely on back-references to the parent being present!).

syntax = "proto3";

package firmament;

import "resource_desc.proto";

// ResourceTopologyNodeDescriptor describe a node resource topology information.
message ResourceTopologyNodeDescriptor {
  ResourceDescriptor resource_desc = 1;
  // children stores the children nodes.
  repeated ResourceTopologyNodeDescriptor children = 2;
  // parent_id is the id of its parent topology node.
  string parent_id = 3;
}
